--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ passlib = "^1.7.4"
 bcrypt = "^3.2.0"
 python-jose = "^3.3.0"
 alembic = "^1.7.6"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 
