--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ bcrypt = "^3.2.0"
 python-jose = "^3.3.0"
 alembic = "^1.7.6"
 gunicorn = "^20.1.0"
+uvloop = "^0.16.0"
+pytest = "^7.0.0"
 
 [tool.poetry.dev-dependencies]
 
